...
        Box {
            Row(
              verticalAlignment = Alignment.CenterVertically
            ) {
                Text(
                  text = selectedFiatCurrency.value,
                  modifier = Modifier.testTag("SelectedFiatCurrency").clickable(onClick = { expanded = true })
                )
                IconButton(onClick = {expanded = true}, modifier = Modifier.testTag("FiatCurrencyDropdown")) {
                    Icon(Icons.Default.ArrowDropDown, contentDescription = "Fiat currency dropdown")
                }
            }
            DropdownMenu(
              expanded = expanded,
              onDismissRequest = { expanded = false },
...
                }
            }
        }
    }

    Column(
      modifier = Modifier.fillMaxWidth().verticalScroll(rememberScrollState()).testTag("SettingsScreenScrollable"),
      horizontalAlignment = Alignment.Start,
      verticalArrangement = Arrangement.SpaceEvenly
    ) {
        Column(
          modifier = Modifier.fillMaxWidth().padding(15.dp, 2.dp),
          horizontalAlignment = Alignment.Start
...
            )

            Spacer(Modifier.height(16.dp))
            CenteredSectionText(i18n(S.GeneralSettings))

            WallyDivider()
            ShowScreenNavSwitch(SHOW_IDENTITY_PREF, NavChoice(ScreenId.Identity, S.title_activity_identity, Icons.Default.Person), S.enableIdentityMenu, showIdentityPref, "IdentitySwitch")
            ShowScreenNavSwitch(SHOW_TRICKLE_PAY_PREF, NavChoice(ScreenId.TricklePayRegistrations, S.Services, Icons.Default.Cloud), S.EnableServices, showTricklePayPref, "ServicesSwitch")
            // Only let them choose to not show assets if they don't have any assets; null = not counted yet.
            val app = wallyApp
            val hasAssets = if (app != null) app.hasAssetsState.collectAsState().value else null
            if (showAssetsPref.collectAsState().value == false || hasAssets == false)
                ShowScreenNavSwitch(SHOW_ASSETS_PREF, NavChoice(ScreenId.Assets, S.title_activity_assets, Icons.Default.Image), S.enableAssetsMenu, showAssetsPref, "AssetsSwitch")
            generalSettingsSwitches.forEach { GeneralSettingsSwitchView(it) }
...
                    CoroutineScope(Dispatchers.IO).launch {
                        preferenceDB.edit().putBoolean(DARK_MODE_PREF, it).commit()
                    }
                    darkModeView = it
                    darkMode = it
                }
            WallyWideSwitchRow(devModeView, S.enableDeveloperView, "DevModeSwitch") {
                LogIt.info("devmode $it")
                CoroutineScope(Dispatchers.IO).launch {
                    preferenceDB.edit().putBoolean(DEV_MODE_PREF, it).commit()
                }
                devModeView = it
                devMode = it
...
                    CoroutineScope(Dispatchers.IO).launch {
                        preferenceDB.edit().putBoolean(RECOMPOSITIONS_MODE_PREF, it).commit()
                    }
                    showRecompositions.value = it
                }
            }
            WallyWideSwitchRow(experimentalUI.collectAsState().value, S.enableExperimentalUx, "ExperimentalUxSwitch") {
                preferenceDB.edit().putBoolean(EXPERIMENTAL_UX_MODE_PREF, it).commit()
                experimentalUI.value = it
            }
            WallyWideSwitchRow(soundEnabled.collectAsState().value, S.enableSound, "SoundSwitch") {
                preferenceDB.edit().putBoolean(SOUND_ENABLED_PREF, it).commit()
                soundEnabled.value = it
            }

            if (experimentalUI.collectAsState().value)
            {
...
            }

            Spacer(Modifier.height(16.dp))
            CenteredSectionText(i18n(S.BlockchainSettings))
            WallyDivider()
            Column(
              modifier = Modifier.padding(start = 4.dp, end = 4.dp).testTag("BlockchainSelectors")
            ) {
                val horizontalAlignmentLine = HorizontalAlignmentLine(merger = { old, new -> max(old, new) })

                // Wrap a column around this so we can then drop all the sources in the center of the page
                Column(modifier = Modifier.wrapContentSize().align(Alignment.CenterHorizontally))
                {
...
                {
                    Spacer(Modifier.height(32.dp))
                    Box(modifier = Modifier.fillMaxWidth()) {
                        Column {
                            Row(horizontalArrangement = Arrangement.SpaceEvenly, modifier = Modifier.fillMaxWidth()) {
                                Button(onClick = { onLogDebugData() }) {
                                    Text("Log Info")
                                }
                                Button(onClick = { onReloadAssets() }) {
                                    Text("Reload Assets")
                                }
                                Button(onClick = { onCloseP2pConnections() }) {
                                    Text("Close P2P")
                                }
                            }
                            Row(horizontalArrangement = Arrangement.SpaceEvenly, modifier = Modifier.fillMaxWidth()) {
                                /* This is dangerous enough, devs should uncomment if they want to use
                            Button(onClick = { onWipeAccounts() }) {
                                Text("Delete Accounts")
                            }*/
                                Button(onClick = { onWipeHeaders() }) {
                                    Text("Delete Headers")
                                }
                            }
                            Row(horizontalArrangement = Arrangement.SpaceEvenly, modifier = Modifier.fillMaxWidth()) {
                                WallyBoringButton({ openUrl(Version.GITLAB_URL) }, modifier = Modifier
                                ) {
                                    ResImageView("icons/gitlab-logo-300.png", modifier = Modifier.width(100.dp))
...
                  textState.value
              }
              //colors = textFieldColors(containerColor = Color.Transparent),
              //colors = TextFieldDefaults.colors(focusedContainerColor = Color.Transparent,
              //  unfocusedContainerColor = Color.Transparent
              ,
              modifier = Modifier.fillMaxWidth().padding(4.dp,0.dp,0.dp,0.dp).testTag("ConfirmAboveEntry")
            )
        }
        Text(chainToCurrencyCode[ChainSelector.NEXA]!!, softWrap = false)
    }
}

...
