...
        tools:visibility="visible">

        <TextView
            android:id="@+id/GuiNexaText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nexa"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/GuiNexaNodeAddr"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/GuiNexaNodeAddr" />

...
