...
            Spacer(Modifier.height(10.dp))
            // Amount row:
            Row(verticalAlignment = Alignment.Bottom, horizontalArrangement = Arrangement.SpaceBetween, modifier = Modifier.fillMaxWidth()) {
                WallyOutLineDecimalEntry(
                  amountString,
                  label = i18n(S.BillAmount),
                  modifier = Modifier.weight(1.0f, false).testTag("SplitBillScreenAmountInput").fillMaxWidth(),
                  suffix = { WallyDropdownMenu(
                    modifier = Modifier.weight(0.75f, false),
                    label = "",
                    items = listOf(fiatCurrencyCode, cryptoCurrencyCode),
                    selectedIndex = usingCurrencySelectedIndex,
                    style = WallyDropdownStyle.Succinct,
...
                          val zero = ""
                          tipAmount = CURRENCY_ZERO
                          tipAmountString.value = tipAmountString.value.copy(zero)
                          zero
                      }
                  },
                  modifier = Modifier.testTag("SplitBillScreenTipInput").weight(1f)
                )
            }
            Spacer(Modifier.height(10.dp))

            // Total line: "Total: <amount> NEX"
            Row(verticalAlignment = Alignment.CenterVertically, horizontalArrangement = Arrangement.SpaceBetween) {
...
